# BrightSign-RestTest

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  TODO  build-docker.sh  build.sh  run-profile.sh
docs/: README.md
samples/: ExampleEntry-jq.json  ExampleEntry.json  fakeRestData-O39OAh  fakeRestData-XLWxLr
src/: SimpleUrlFetcher.h  UrlValidator.cpp  UrlValidator.h  main.cpp
src/Utils/: Logger.cpp  Logger.h  MiscUtils.cpp  MiscUtils.h  SimpleUrlFetcher.cpp  SimpleUrlFetcher.h  UserAnalytics.cpp  UserAnalytics.h  UsersAndFriends.cpp  UsersAndFriends.h
tests/: test_UrlValidator.cpp  test_UserAnalytics.cpp  test_UserAndFriends.cpp
tools/: getSampleResponses.sh  install-docker.sh
